Prevent math code from stretching

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -68,9 +68,9 @@ boxcontent {
 
 .mathcontainer {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
 
     background: #fff;
     padding: 1rem .5rem;
@@ -79,6 +79,8 @@ boxcontent {
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
     page-break-inside: avoid;
+    resize: none;
+    object-fit: cover;
 }
 
 @page {
